k8s/apps/wodore/apps/mapproxy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wd-mapproxy
spec:
  type: ClusterIP
  selector:
    app: wd-mapproxy
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
